outdoornav_user_manual_versioned_docs/version-2.0.0/api/api_overview.mdx
---
title: API Overview
sidebar_label: Overview
sidebar_position: 1
toc_min_heading_level: 2
toc_max_heading_level: 4
---

While the Web User Interface provides a great way to get started quickly
with OutdoorNav Software, some users will want programmatic control or
may wish to develop their own graphical user interfaces \-- for those
users, the Application Programming Interface (API) provides the
flexibility to do so.

The API is, at present, a [ROS 2 Jazzy](https://docs.ros.org/en/jazzy/index.html) API.
The API is divided into two sections, whose details are provided below:

-   [Autonomy API](./api_endpoints/autonomy_api): The set of [ROS
    Topics](http://wiki.ros.org/Topics) that are used for monitoring and
    controlling the the hardware platform through the OutdoorNav
    autonomy software.
    -   [Topics Subscribed to by Autonomy](./api_endpoints/autonomy_api.mdx#autonomy-subscribers):
        The set of [ROS Topics](http://wiki.ros.org/Topics)
        subscribed to by OutdoorNav Software, typically published by the
        client for directing OutdoorNav operation.
    -   [Topics Published by Autonomy](./api_endpoints/autonomy_api.mdx#autonomy-publishers):
        The set of [ROS Topics](http://wiki.ros.org/Topics) published by
        OutdoorNav Software, to be subscribed to by the UGV.
    -   [Services Exported by Autonomy](./api_endpoints/autonomy_api#autonomy-services):
        The set of [ROS Services](http://wiki.ros.org/Services) provided
        by OutdoorNav Software, for use by the client to modify/control
        the behaviour of the Autonomy.
    -   [Actions Exported by Autonomy](./api_endpoints/autonomy_api#autonomy-actions):
        The set of [ROS Actions](http://wiki.ros.org/actionlib) provided
        by OutdoorNav Software, for use by the client to modify/control
        the behaviour of the Autonomy.
-   [Mission Manager API](./api_endpoints/mission_manager_api): The set of [ROS
    Services](http://wiki.ros.org/Services) that are used for creating, deleting, 
    and modifying OutdoorNav Missions
-   [API Examples](./api_examples/api_examples_overview): Example code to come.


## QoS Profiles {#qos-profiles}

Topics and services in ROS 2 use Quality of Service (QoS) profiles to change communication policies. The QoS profile
of a topic or service has several policies such as history, depth, reliability, durability, and more. For more details on
QoS settings, visit the [ROS 2 documentation](https://docs.ros.org/en/jazzy/Concepts/About-Quality-of-Service-Settings.html).

For Clearpath platforms, the main policies that may change between different topics and services are reliability and durability. For reliability
there are two options: _Best Effort_, and _Reliable_. A _Best Effort_ reliability suggests that an attempt will be made to publish
the data, but if the network is not robust then the data may be lost. On the other hand, _Reliable_ guarantees that the data will be received.
This may require that the data be sent multiple times.

The durability of a QoS profile can be either _Transient Local_ or _Volatile_. _Transient Local_ means that data for published messages will
be stored by the publisher even after it has been published. A new subscriber will receive the data even if a lot of time has passed since it was originally published.
This durability is typically used for data that only needs to be published once, such as the robot description. The other durability policy is _Volatile_ which does not
store old messages. The messages are published and only active subscribers will receive the data. New subscribers will have to wait for the next message to be published.
Most topics will use a _Volatile_ durability policy.

It is important to check for [QoS compatibility](https://docs.ros.org/en/jazzy/Concepts/Intermediate/About-Quality-of-Service-Settings.html#qos-compatibilities) when interacting with ROS 2.
Mixing of QoS policies when publishing or subscribing to topics can lead to incompatibility. For example, subscribing to a Best Effort publisher with a Reliable subscriber
is not compatible and will result in no data being received on the subscriber. The easiest way to check the QoS profile of a topic is to use the ROS 2 command line interface.

```
ros2 topic info /topic_name -v
```

## Common QoS profiles {#common-qos-profiles}

The following are some common QoS profiles used by Clearpath platforms.

### System Default

- **History**: _Keep Last_
- **Depth**: _10_
- **Reliability**: _Reliable_
- **Durability**: _Volatile_
- **Deadline**: _System Default_
- **Lifespan**: _System Default_
- **Liveliness**: _Automatic_
- **Lease Duration**: _System Default_

The _System Default_ QoS profile is the most common profile used by most topics.

### Sensor Data

- **History**: _Keep Last_
- **Depth**: _5_
- **Reliability**: _Best Effort_
- **Durability**: _Volatile_
- **Deadline**: _System Default_
- **Lifespan**: _System Default_
- **Liveliness**: _Automatic_
- **Lease Duration**: _System Default_

The _Sensor Data_ QoS Profile uses a _Best Effort_ reliability to send the latest data
as soon as possible, without bothering to resend data that was not received. This is mostly used
by the MCU and sensor drivers.

:::note

Not all sensor drivers use this QoS profile. Always check the QoS profile before trying to subscribe to the topic.

:::

### Transient Local

- **History**: _Keep Last_
- **Depth**: _10_
- **Reliability**: _Reliable_
- **Durability**: _Transient Local_
- **Deadline**: _System Default_
- **Lifespan**: _System Default_
- **Liveliness**: _Automatic_
- **Lease Duration**: _System Default_

The _Transient Local_ QoS Profile offers a _Transient Local_ durability, and is typically used by topics that only
want to send messages once. For Clearpath platforms, this includes the robot description topic and the `/rosout` topic
which offers system logs.

## Namespacing

Namespacing is the method of adding a prefix to a robot's nodes and topics; this helps differentiate them from another robot that
may be on the same network. For example, every robot will have a `cmd_vel` topic for commanding velocity. If both robots
used the same topic, then they would both drive when a message is published to that topic. By namespacing, we can remap the topic
to `robot1/cmd_vel` and `robot2/cmd_vel` for each respective robot.

By default, the namespace of the robot will be obtained from the serial number of the robot. If your serial number is `cpr-a300-00001`, then your namespace
will be `a300_00001`. This can be overwritten in the [robot.yaml](../../../docs/ros/config/yaml/overview) file.
